tests/ui/keyword/keyword-self-as-identifier.rs
fn main() {
    let Self = 22; //~ ERROR cannot find unit struct, unit variant or constant `Self` in this scope
}

// ferrocene-annotations: fls_7bxv8lybxm18
// Identifier Patterns
